package com.ms.catlife.core.util

object TestTags {
    const val CATS_LIST = "CATS_LIST"
    const val WELCOME = "WELCOME"
    const val CAT_NAME_TEXT_FIELD = "CAT_NAME_TEXT_FIELD"
    const val CAT_WEIGHT_FIELD = "CAT_WEIGHT_FIELD"
    const val CAT_COAT_FIELD = "CAT_COAT_FIELD"
    const val SUBMIT_CAT_BUTTON = "SUBMIT_CAT_BUTTON"
}