<resources>
    <string name="app_name" translatable="false">Cat Life</string>
    <string name="add_cat_title">Add a new cat</string>

    // Form
    <string name="cat_name">Cat name*</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="uri_cat_picture">Uri for cat picture</string>
...
